<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioGroup
            android:layout_width="wrap_content"
            android:padding="@dimen/margin_normal"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/radioGroup">


        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton1" android:text="@string/daily"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2" android:text="@string/each_week_ending"/>

        <RadioButton
                android:text="@string/do_not_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3"/>

    </RadioGroup>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dayOfWeekSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/radioGroup"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            android:spinnerMode="dropdown"
            android:entries="@array/days_of_week" app:layout_constraintHorizontal_bias="0.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>